--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <img id="can1" src="https://picna.000webhostapp.com/hello.png">
 
-    <p id="can">will u be my valentine?</p>
+    <p id="can">Will u be my valentine little Veriiiii<3  ?</p>
 
     <button id="yes">Yes</button>
 
