--- a/index2.html
+++ b/index2.html
@@ -15,4 +15,6 @@
 	</svg>
 	</div>
 
-	
+	<div class="container2">
+		<p class="message"> ♥ I love you so much my Little Baby Penguin ♥ </p>
+	</div>
