--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <title>will u be my valentine?</title>
+  <title>Will u be my valentine?</title>
 
 </head>
 
